data/derived/comb/progs/unify/prog2018.ml.out
Characters 42-51:
  let rec clone x n = if n < 0 then [] else clone x n-1;;
                                            ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
